--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
     "uuid": "^9.0.1",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.18.1",
